--- a/christmas-shop/sass/layout/_header.scss
+++ b/christmas-shop/sass/layout/_header.scss
@@ -106,8 +106,7 @@
 
     @media screen and (max-width:769px) {
         & {
-            position: relative;
-            z-index: 2;
+            z-index: 1;
         }
     }
 }
